--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ h1 {
 }
 
 #nosotros {
-    height: 782px;
+    height: 740px;
     background-image: url("../img/vectorDecoracion.png");
     background-repeat: no-repeat;
     background-size: 371px;
@@ -182,8 +182,40 @@ h2 {
 }
 
 #servicios{
-    height: 500px
+    height: 900px;
 }
+
+#servicios h2 {
+    margin-left: 35px;
+    padding-top: 75px;
+    margin-bottom: 40px;
+}
+
+#servicios p{
+    color: #0B2A4A
+}
+
+
+.lista li{
+    line-height: 5px;
+}
+
+.lista p{
+    line-height: 15px;
+    margin-bottom: 5px;
+}
+
+.lista{
+    font-weight: 500;
+    font-size: 12px;
+    letter-spacing: 0.06em;
+    color: #002B49;
+    margin-top: 25px;
+    width: 190px;
+    margin-left: -40px;
+}
+
+
 
 
 @media screen and (max-width: 990px) {
@@ -275,6 +307,22 @@ h2 {
         height:62px;
     }
 
+    
+.lista{
+    font-weight: 500;
+    font-size: 11px;
+    letter-spacing: 0.06em;
+    color: #002B49;
+    margin-top: 25px;
+    width: 190px;
+    margin-left: -5px;
+}
+
+.imgLista{
+    height: 140px;
+}
+
+
 }
 
 @media screen and (max-width: 600px) {
@@ -358,7 +406,7 @@ h2 {
         height: 735px;
     }
 
-    #nosotros{
+    .columna1Nosotros{
         background: rgba(11, 42, 74, 0.25);
         height:220px;
         background-size: 130px;
@@ -403,5 +451,23 @@ h2 {
     .columna2Nosotros img{
         margin: 0px 0px 0px 0px;
     height: 220px;
+    }
+
+    #nosotros{
+        height: 600px;
+        background-image: none;
+    }
+
+    #servicios h2{
+        padding-top: 20px;
+    }
+
+    .imgLista{
+        height: 120px
+    }
+
+    .lista{
+        font-size: 10px;
+        margin-left: 12px;
     }
 }
